@@ -1,5 +1,6 @@
 **Current GIT Head**
 
+  * Feature: Define the RRD heartbeat per check_command -> [[tpl_custom]] 
   * Feature: New config.php option pdf_graph_opt 
   * Feature: Recognize the 'background_pdf' option in page definitions -> [[pages]]
   * Feature: Recognize the 'source' option in page definitions -> [[pages]]
